数据类型设置
1.数据类型设置(待完善)
2.热部署增加开关
3.修改部分包名